k8s/apps/homepage/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: cwx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - name: homepage
        image: harbor.chenwx.top/ghcr.io/gethomepage/homepage:v1.6.1@sha256:99aa3350b6d06fd99c3f10b00380843fc1bdaeec5ec15e91dbbaaf7bb2d8313f
        imagePullPolicy: IfNotPresent
        # restartPolicy: Always
        ports:
          - containerPort: 3000
            protocol: TCP

        volumeMounts:
          - mountPath: /app/config/services.yaml
            name: config
            subPath: services.yaml
          - mountPath: /app/config/settings.yaml
            name: config
            subPath: settings.yaml
          - mountPath: /app/config/widgets.yaml
            name: config
            subPath: widgets.yaml
          - mountPath: /app/config/bookmarks.yaml
            name: config
            subPath: bookmarks.yaml

      volumes:
        - name: config
          configMap:
            name: homepage-config
