k8s/apps/homepage/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: cwx
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: homepage-service
spec:
  selector:
    app: homepage
  ports:
  - port: 80
    name: web
    targetPort: 3000
