k8s/apps/homepage/IngressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.chenwx.top`)
      kind: Rule
      services:
        - name: homepage
          namespace: cwx
          port: 80
